<resources>
    <string name="app_name">Popular-Movie-App1</string>
    <string name="action_settings">Settings</string>
    <string name="movie_name">MOVIE NAME</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="language">LANGUAGE</string>
    <string name="run_time">RUN TIME</string>
    <string name="genre">GENRE</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="ten_ten">10/10</string>
    <string name="colon">:</string>

</resources>
